src/objects/Tool_Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Available_to_Relate_to_a_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available to Relate to a Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Rule_Development_Cost__c</fullName>
        <label>Business Rule Development Cost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capability_Description__c</fullName>
        <label>Capability Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capability__c</fullName>
        <label>Capability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Cycle</fullName>
                </value>
                <value>
                    <fullName>Limited Cycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Release__c</fullName>
        <label>Current Release</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Preparation__c</fullName>
        <label>Data Preparation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Not Evaluated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Storage_Movement_Architecture__c</fullName>
        <label>Data Storage/Movement/Architecture</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Not Evaluated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Development__c</fullName>
        <label>Development</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_of_Access_and_Use_Description__c</fullName>
        <label>Duration of Access and Use Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_of_Access_and_Use__c</fullName>
        <label>Duration of Access and Use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Yearly Renewal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Ranking__c</fullName>
        <label>Final Ranking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Not Evaluated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hosting_Cost__c</fullName>
        <label>Hosting Cost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_of_Familiarity__c</fullName>
        <label>Level of Familiarity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Cost__c</fullName>
        <label>License Cost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes(corporate)</fullName>
                </value>
                <value>
                    <fullName>Yes(by user)</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Function__c</fullName>
        <label>Primary Function</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_BI_Visualization__c</fullName>
        <label>Reporting (BI, Visualization)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Not Evaluated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requires_Custom_Code_Development__c</fullName>
        <label>Requires Custom Code Development</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resides__c</fullName>
        <label>Resides</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inhouse</fullName>
                </value>
                <value>
                    <fullName>External (Other)</fullName>
                </value>
                <value>
                    <fullName>External (Cloud)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Function__c</fullName>
        <label>Secondary Function</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Statistical_Analysis__c</fullName>
        <label>Statistical Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Not Evaluated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Tool Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Not Recommended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tool_Accessibility__c</fullName>
        <label>Tool Accessibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Power Users</fullName>
                </value>
                <value>
                    <fullName>External Power Users</fullName>
                </value>
                <value>
                    <fullName>Internal/External Power Users</fullName>
                </value>
                <value>
                    <fullName>External Users/Canned Reports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Type_Picklist__c</fullName>
        <label>User Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Scientist</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utilized_Release_s__c</fullName>
        <label>Utilized Release(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Related__c</fullName>
        <label>Vendor Related</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Not Evaluated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tool Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Status__c</columns>
        <columns>Available_to_Relate_to_a_Project__c</columns>
        <columns>NAME</columns>
        <columns>Capability__c</columns>
        <columns>Business_Rule_Development_Cost__c</columns>
        <columns>Data_Preparation__c</columns>
        <columns>Data_Storage_Movement_Architecture__c</columns>
        <columns>Duration_of_Access_and_Use__c</columns>
        <columns>Duration_of_Access_and_Use_Description__c</columns>
        <columns>Primary_Function__c</columns>
        <columns>Statistical_Analysis__c</columns>
        <columns>User_Type_Picklist__c</columns>
        <columns>User_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Tool_Inventory_Metadata</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Final_Ranking__c</columns>
        <columns>Business_Rule_Development_Cost__c</columns>
        <columns>Capability__c</columns>
        <columns>Current_Release__c</columns>
        <columns>Data_Storage_Movement_Architecture__c</columns>
        <columns>Development__c</columns>
        <columns>Duration_of_Access_and_Use__c</columns>
        <columns>Hosting_Cost__c</columns>
        <columns>Level_of_Familiarity__c</columns>
        <columns>License_Cost__c</columns>
        <columns>Primary_Function__c</columns>
        <columns>Requires_Custom_Code_Development__c</columns>
        <columns>Resides__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tool Inventory Metadata</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Tool_Inventory_Metadata1</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Final_Ranking__c</columns>
        <columns>Business_Rule_Development_Cost__c</columns>
        <columns>Capability__c</columns>
        <columns>Current_Release__c</columns>
        <columns>Data_Storage_Movement_Architecture__c</columns>
        <columns>Development__c</columns>
        <columns>Duration_of_Access_and_Use__c</columns>
        <columns>Hosting_Cost__c</columns>
        <columns>Level_of_Familiarity__c</columns>
        <columns>License_Cost__c</columns>
        <columns>Primary_Function__c</columns>
        <columns>Requires_Custom_Code_Development__c</columns>
        <columns>Resides__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Production</value>
        </filters>
        <label>Tools in Production</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tool Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Valid_Tool_User_Other</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND( INCLUDES( User_Type_Picklist__c , &apos;Other&apos;)  , ISBLANK( User_Type__c ) ) , true, false)</errorConditionFormula>
        <errorDisplayField>User_Type__c</errorDisplayField>
        <errorMessage>Please specify the User Type</errorMessage>
    </validationRules>
</CustomObject>